--- a/trunk/application/views/ClearBlue2/attachmentmanager.twig
+++ b/trunk/application/views/ClearBlue2/attachmentmanager.twig
@@ -1,5 +1,5 @@
 <table border="0" class="table" cellspacing="1" cellpadding="1" id="attachment">
-	<tr style="text-align:center;">
+	<tr class="centerText">
 		<td class="ui-widget-header" width="40%">{{LANG_FILENAME}}</td>
 		<td class="ui-widget-header" width="20%">{{LANG_FILESIZE}}</td>
 		<td class="ui-widget-header" width="20%">{{LANG_FILETYPE}}</td>
@@ -7,7 +7,7 @@
 	{# see if any files are uploaded. #}
 	{% if FILES == FALSE %}
 	<tr>
-		<td colspan="3">{{LANG_NOFILES}}</td>
+		<td colspan="3" class="centerText">{{LANG_NOFILES}}</td>
 	</tr>
 	{% else %}
 	{% for f in FILES %}
