--- a/trunk/application/views/ClearBlue2/css/style.css
+++ b/trunk/application/views/ClearBlue2/css/style.css
@@ -1,10 +1,23 @@
 /*
 ========================================
 Filename: style.css
-Last Modified: 06/20/2012
+Last Modified: 06/22/2012
 ClearBlue2 CSS template file for Elite Bulletin Board v3.0.0 RC2
 ========================================
 */
+
+/*
+==============================
+COMMON CSS
+==============================
+*/
+.centerContainer {
+	margin: 0 auto;
+}
+
+.centerText {
+	text-align: center;
+}
 
 /*
 ==============================
@@ -294,7 +307,7 @@ UPLOAD CSS
 	width: 420px;
 	margin-top: 5px;
 	margin-bottom: 5px;
-	background-color: #8494B4;
+	background-color: #6F88AD;
 	color: #ffffff;
 	border: 1px solid #163061;
 	position: relative;
@@ -412,7 +425,7 @@ BBCODE TAG CSS
 .code{
 	color: #fff;
 	background-color: #4b6c9e;
-	font-family: "courier new", "times new roman", monospace;
+	font-family: "courier new", monospace;
 	font-size: x-small;
 	line-height: 1.3em;
 	border: 1px solid #163061;
@@ -432,9 +445,9 @@ BBCODE TAG CSS
 	padding: 1px;
 	font-size: x-small;
 	line-height: 1.4em;
-	-webkit-border-radius: 10px; /* Safari prototype */
-	-moz-border-radius: 10px; /* Gecko browsers */
-	border-radius: 10px; /* Everything else - limited support at the moment */ 
+	-webkit-border-radius: 10px;
+	-moz-border-radius: 10px; /* no longer used as of firefox 12; use border-radius and equiv. */
+	border-radius: 10px;
 	padding: 0px 10px 0px 10px;
 }
 .warningheader {
@@ -518,89 +531,10 @@ a.hint:hover span{
 	font-size: x-small;
 	line-height:18px;
 	z-index:100;
-	-webkit-border-radius: 10px; /* Safari prototype */
-	-moz-border-radius: 10px; /* Gecko browsers */
-	border-radius: 10px; /* Everything else - limited support at the moment */
+	-webkit-border-radius: 10px;
+	-moz-border-radius: 10px; /* no longer used as of firefox 12; use border-radius and equiv. */
+	border-radius: 10px;
 	padding: 0px 10px 0px 10px;
-}
-
-/*
-==============================
-SPELL CHECK CSS
-==============================
-*/
-.spellcheck-suggestbox {
-	position: absolute;
-	display: none;
-	z-index: 9999;
-	padding: 0px 9px 9px 0px;
-	font-size: .8em;
-	color: #000000;
-	background-color: #C3C9D5;
-	border: 1px solid #163061;
-}
-.spellcheck-suggestbox em {
-	border-top: 1px solid #ccc;
-	border-left: 1px solid #bbb;
-	border-right: 1px solid #bbb;
-	padding: 3px 6px 3px 6px;
-	display: block;
-	margin: 0px;
-	text-decoration: none;
-	color: #333;
-	font-style: italic;
-}
-.spellcheck-suggestbox a, .spellcheck-suggestbox a:visited {
-	border-left: 1px solid #bbb;
-	border-right: 1px solid #bbb;
-	padding: 3px 6px 3px 6px;
-	display: block;
-	margin: 0px;
-	text-decoration: none;
-	color: #333;
-	outline: none;
-}
-.spellcheck-suggestbox a.first, .spellcheck-suggestbox a.first:visited {
-	border-top: 1px solid #ccc;
-}
-.spellcheck-suggestbox a:hover {
-	color: #000;
-	background: #ddd;
-}
-.spellcheck-suggestbox-words {
-	background: #fff;
-}
-.spellcheck-suggestbox-foot {
-	border-top: 1px solid #ddd;
-	background: #fff;
-}
-.spellcheck-suggestbox-foot a, .spellcheck-suggestbox-foot a:visited {
-	outline: none;
-}
-.pellcheck-focus-helper {
-	position: absolute;
-	top: -2000px;
-	z-index: 0;
-}
-.spellcheck-word-highlight {
-	font-size: 1.2em;
-	color: #fff;
-	font-weight: bold;
-	text-decoration: none;
-	cursor: pointer;
-}
-.spellcheck-badwords {
-	margin-bottom: 2em;
-	margin-top: -0.5em;
-	font-size: 1em;
-	border: 1px solid #bbb;
-	padding: 4px 6px;
-}
-.spellcheck-sep {
-	padding-right: 0.5em;
-}
-.spellcheck-sep-last {
-	display: none;
 }
 
 /*
