--- a/trunk/application/views/ClearBlue2/lostpassword.twig
+++ b/trunk/application/views/ClearBlue2/lostpassword.twig
@@ -7,8 +7,8 @@
 {{BREADCRUMB|raw}}<br />
 
 <!-- validation box. -->
-<div align="center" style="display:none;" id="div_ErrMsg">
-	<div class="ui-widget" style="width: 45%;">
+<div style="display:none;" id="div_ErrMsg">
+	<div class="ui-widget centerContainer" style="width: 45%;">
 		<div class="ui-state-error ui-corner-all" style="padding: 0 .7em;text-align:left;">
 			<span style="float: right;font-weight:bold;"><a href="#close" onclick="$('#div_ErrMsg').hide('blind', {}, 500);" class="ui-icon ui-icon-circle-close">&nbsp;</a></span>
 			<p id="validateRes"></p>
@@ -19,7 +19,7 @@
 {{PWDRECOVERFORM|raw}}
 <table border="0" class="table" cellspacing="1" cellpadding="1">
 <tr>
-<td colspan="2" class="ui-widget-header" align="center">::{{LANG_PWDRECOVER}}::</td>
+<td colspan="2" class="ui-widget-header centerText">::{{LANG_PWDRECOVER}}::</td>
 </tr><tr>
 <td class="ui-widget-content" width="50%">{{LANG_USERNAME}}/{{LANG_EMAIL}} [{{URL_TAG("login/register", LANG_REGISTER)|raw}}]</td>
 <td class="ui-widget-content" width="50%">
@@ -27,7 +27,7 @@
 	{{VALIDATION_USERNAME_EMAIL|raw}}
 </td>
 </tr><tr>
-<td colspan="2" class="ui-widget-header" align="center"><input type="submit" value="{{LANG_GETPASS}}" class="submit" /></td>
+<td colspan="2" class="ui-widget-header centerText"><input type="submit" value="{{LANG_GETPASS}}" class="submit" /></td>
 </tr>
 </table>
 </form>
