--- a/trunk/application/views/ClearBlue2/register.twig
+++ b/trunk/application/views/ClearBlue2/register.twig
@@ -36,8 +36,8 @@ $(document).ready(function(){
 </script>
 
 <!-- validation box. -->
-<div align="center" style="display:none;" id="div_ErrMsg">
-	<div class="ui-widget" style="width: 45%;">
+<div style="display:none;" id="div_ErrMsg">
+	<div class="ui-widget centerContainer" style="width: 45%;">
 		<div class="ui-state-error ui-corner-all" style="padding: 0 .7em;text-align:left;">
 			<span style="float: right;font-weight:bold;"><a href="#close" onclick="$('#div_ErrMsg').hide('blind', {}, 500);" class="ui-icon ui-icon-circle-close">&nbsp;</a></span>
 			<p id="validateRes"></p>
@@ -52,7 +52,7 @@ $(document).ready(function(){
 	<td class="ui-widget-content" width="50%">{{LANG_EMAIL}}</td>
 	<td class="ui-widget-content" width="50%"><input name="email" type="text" size="30" maxlength="255" class="text" id="email" />{{VALIDATION_EMAIL|raw}}</td>
 </tr><tr>
-	<td class="ui-widget-content" width="50%">{{LANG_USERNAME}}<a href="#" class="hint">[?]<span>{{LANG_RULE}}</span></a></td>
+	<td class="ui-widget-content" width="50%">{{LANG_USERNAME}}<a href="#" class="hint" tabindex="-1">[?]<span>{{LANG_RULE}}</span></a></td>
 	<td class="ui-widget-content" width="50%"><input name="username" type="text" size="30" maxlength="25" class="text" id="username" />{{VALIDATION_USERNAME|raw}}</td>
 </tr><tr>
 	<td class="ui-widget-content" width="50%">{{LANG_PASSWORD}}</td>
@@ -68,7 +68,7 @@ $(document).ready(function(){
 	<td class="ui-widget-content" width="50%">{{LANG_TIME}}</td>
 	<td class="ui-widget-content" width="50%">{{TimeZone|raw}} {{VALIDATION_TIMEZONE|raw}}</td>
 </tr><tr>
-	<td class="ui-widget-content" width="50%">{{LANG_TIMEFORMAT}}<a href="#" class="hint">[?]<span>{{LANG_TIMEINFO}}</span></a></td>
+	<td class="ui-widget-content" width="50%">{{LANG_TIMEFORMAT}}<a href="#" class="hint" tabindex="-1">[?]<span>{{LANG_TIMEINFO}}</span></a></td>
 	<td class="ui-widget-content" width="50%"><input type="text" name="time_format" value="{{TIMEFORMAT}}" size="30" maxlength="14" class="text" id="time_format" />{{VALIDATION_TIMEFORMAT|raw}}</td>
 </tr><tr>
 	<td class="ui-widget-content" width="50%">{{LANG_PMNOTIFY}}</td>
@@ -85,7 +85,7 @@ $(document).ready(function(){
 </tr>
 {%if PREF_CAPTCHA == 1%}
 <tr>
-	<td class="ui-widget-content" width="50%">{{LANG_CAPTCHA}}<a href="#" class="hint">[?]<span>{{LANG_CAPTCHAHELP}}</span></a></td>
+	<td class="ui-widget-content" width="50%">{{LANG_CAPTCHA}}<a href="#" class="hint" tabindex="-1">[?]<span>{{LANG_CAPTCHAHELP}}</span></a></td>
 	<td class="ui-widget-content" width="50%">
 		<input type="text" name="captcha" size="10" class="text" id="captcha" />&nbsp;<strong>{{CAPTCHA}}</strong>
 		{{VALIDATION_CAPTCHA|raw}}
@@ -95,14 +95,14 @@ $(document).ready(function(){
 
 {%if PREF_RULES == 1%}
 <tr>
-	<td colspan="2" class="ui-widget-content" align="center">
+	<td colspan="2" class="ui-widget-content centerText">
 		<textarea name="tos_msg" rows="5" cols="40" class="text" readonly=readonly>{{RULES}}</textarea><br />
 		<input name="tos_terms" id="tos_terms" type="checkbox" value="yes" /><b>{{LANG_AGREE}}</b>
 	</td>
 </tr>
 {%endif%}
 <tr>
-<td colspan="2" class="ui-widget-content" align="center">
+<td colspan="2" class="ui-widget-content centerText">
 	<input name="coppavalid" id="coppavalid" type="checkbox" value="yes" />
 	{%if PREF_COPPA == 13%}
 		<strong>{{COPPA_13}}</strong>
@@ -117,7 +117,7 @@ $(document).ready(function(){
 	{%endif%}
 </td>
 </tr><tr>
-	<td colspan="2" class="ui-widget-header" align="center"><input type="submit" VALUE="{{LANG_REGISTER}}" class="submit" /></td>
+	<td colspan="2" class="ui-widget-header centerText"><input type="submit" VALUE="{{LANG_REGISTER}}" class="submit" /></td>
 </tr>
 </table>
 </form>
