--- a/trunk/application/views/ClearBlue2/viewboard.twig
+++ b/trunk/application/views/ClearBlue2/viewboard.twig
@@ -16,10 +16,10 @@
 </tr>
 {% for b in SUBBOARDDATA %}
 <tr>
-	<td class="ui-widget-content" align="center">{{ b.id|ReadStat(LOGGEDUSER) ?  IMG("application/views/ClearBlue2/images/old.gif")|raw : IMG("application/views/ClearBlue2/images/new.gif")|raw }}</td>
+	<td class="ui-widget-content centerText">{{ b.id|ReadStat(LOGGEDUSER) ?  IMG("application/views/ClearBlue2/images/old.gif")|raw : IMG("application/views/ClearBlue2/images/new.gif")|raw }}</td>
 	<td class="ui-widget-content"><strong>{{URL_TAG("boards/viewboard/"~ b.id, b.Board)|raw}}</strong>&nbsp;{{URL_TAG("boards/boardFeed/"~ b.id, IMG("application/views/ClearBlue2/images/rss.png"))|raw}} <br />{{b.Description|raw}}<br />{{b.id|SubBoards|raw}}</td>
-	<td class="ui-widget-content" align="center">{{b.id|counter("TopicCount")}}</td>
-	<td class="ui-widget-content" align="center">{{b.id|counter("PostCount")}}</td>
+	<td class="ui-widget-content centerText">{{b.id|counter("TopicCount")}}</td>
+	<td class="ui-widget-content centerText">{{b.id|counter("PostCount")}}</td>
 	<td class="ui-widget-content">{{b.last_update|PostedDate(TimeFormat, TimeZone)}}<br />{{URL_TAG("boards/viewtopic/"~ b.tid~"/"~b.last_page, LANG_POSTEDBY)|raw}} {{b.Posted_User}}</td>
 </tr>
 {% endfor %}
@@ -58,17 +58,17 @@
 
 {% if BOARDCOUNT== 0 %}
 <tr>
-<td colspan="6" align="center" class="ui-widget-content">{{LANG_NOPOST}}</td>
+<td colspan="6" class="ui-widget-content centerText">{{LANG_NOPOST}}</td>
 </tr>
 {% elseif CANREAD_TOPIC == FALSE %}
 <tr>
-<td colspan="6" align="center" class="ui-widget-content">{{LANG_NOREAD}}</td>
+<td colspan="6" class="ui-widget-content centerText">{{LANG_NOREAD}}</td>
 </tr>
 {% else %}
 
 {% for t in BOARDDATA %}
 <tr>
-<td class="ui-widget-content" align="center" width="5%">
+<td class="ui-widget-content centerText" width="5%">
 {# icon setup. #}
 {% if t.important == 1 %}
 {{IMG("application/views/ClearBlue2/images/important.png")|raw}}
@@ -87,8 +87,8 @@
 </td>
 <td width="40%" class="ui-widget-content">{{ Attachment(t.tid) ? IMG("application/views/ClearBlue2/images/attachment.png")|raw : "" }} {{URL_TAG("boards/viewtopic/"~ t.tid, t.Topic)|raw}}</td>
 <td width="15%" class="ui-widget-content">{{t.author}}</td>
-<td width="10%" align="center" class="ui-widget-content">{{t.tid|counter("TopicReplies")}}</td>
-<td width="10%" align="center" class="ui-widget-content">{{t.Views|counter("TopicViews")}}</td>
+<td width="10%" class="ui-widget-content centerText">{{t.tid|counter("TopicReplies")}}</td>
+<td width="10%" class="ui-widget-content centerText">{{t.Views|counter("TopicViews")}}</td>
 <td width="20%" class="ui-widget-content">{{t.last_update|PostedDate(TimeFormat, TimeZone)}}<br />{{URL_TAG("boards/viewtopic/"~t.tid~"/"~t.last_page~"#post"~t.pid, LANG_POSTEDBY)|raw}}: {{t.posted_user}}</td>
 </tr>
 {% endfor %}
@@ -96,7 +96,7 @@
 {% endif %}
 </table><br />
 
-<div class="ui-widget-content ui-corner-all" style="text-align:left;width:600px;margin-left:550px;padding:0 .7em;">
+<div class="ui-widget-content ui-corner-all centerContainer" style="text-align:left;width:600px;padding:0 .7em;">
 	{{IMG("application/views/ClearBlue2/images/important.png")|raw}}&nbsp;{{LANG_IMPORTANTTOPIC}}&nbsp;
 	{{IMG("application/views/ClearBlue2/images/locked.png")|raw}}&nbsp;{{LANG_LOCKTOPIC}}&nbsp;
 	{{IMG("application/views/ClearBlue2/images/poll.gif")|raw}}&nbsp;{{LANG_POLLTOPIC}}&nbsp;
