--- a/trunk/application/views/ClearBlue2/reply.twig
+++ b/trunk/application/views/ClearBlue2/reply.twig
@@ -77,20 +77,28 @@
 		<input id="attach" name="userfile" type="file" /><br />
 		<input type="submit" value="{{LANG_UPLOAD}}" id="fileUpload" />
 		<input type="reset" value="{{LANG_CLEAR}}" id="ClearList" />
-		<input type="button" value="{{LANG_VIEWFILES}}" id="AttachList" />
+		<input type="button" value="{{LANG_ADDMOREFILES}}" id="addMoreFiles" />
 	</form>
 	<div id="filelist"></div>
 
 	<script type="text/javascript">
 		$(function(){
 			$('#attach').jUploader({
+				lngOk: lang.Ok,
+				lngYes: lang.Yes,
+				lngNo: lang.No,
+				lngError: lang.Error,
+				duplicateTitle: lang.duplicateTitle,
+				duplicateMsg: lang.duplicateMsg,
 				LoadingGfx: "{{BOARD_URL}}application/views/ClearBlue2/images/loading.gif",
 				LoadingMsg: lang.attachLoading,
 				PendingMsg: lang.attachPending,
 				SuccessMsg: lang.attachSuccess,
 				FailureMsg: lang.attachFailed,
+				uploadLimitTitle: lang.attachLimitTitle,
 				uploadLimitMsg: lang.attachLimit,
 				uploadLimit: "{{ATTACHMENTLIMIT}}",
+				confirmDeleteTitle: lang.attachDeleteTitle,
 				deleteUrl: "{{BOARD_URL}}index.php/upload/delete",
 				confirmDeletMsg: lang.attachDeletePrompt,
 				fileMgrUrl: "{{BOARD_URL}}index.php/upload/"
