--- a/trunk/application/views/ClearBlue2/attachmentmanager.twig
+++ b/trunk/application/views/ClearBlue2/attachmentmanager.twig
@@ -1,9 +1,9 @@
 <table border="0" class="table" cellspacing="1" cellpadding="1" id="attachment">
 	<tr class="centerText">
-		<td class="ui-widget-header" width="40%">&nbsp;</td>
-		<td class="ui-widget-header" width="40%">{{LANG_FILENAME}}</td>		
-		<td class="ui-widget-header" width="20%">{{LANG_FILESIZE}}</td>
-		<td class="ui-widget-header" width="20%">{{LANG_FILETYPE}}</td>
+		<td class="ui-widget-header" width="5%">&nbsp;</td>
+		<td class="ui-widget-header" width="45%">{{LANG_FILENAME}}</td>		
+		<td class="ui-widget-header" width="10%">{{LANG_FILESIZE}}</td>
+		<td class="ui-widget-header" width="40%">{{LANG_FILETYPE}}</td>
 	</tr>
 	{# see if any files are uploaded. #}
 	{% if FILES == FALSE %}
@@ -15,7 +15,7 @@
 	<tr>
 		<td><a href="#" class="delete" id="{{f.id}}"><img src="{{BOARD_URL}}application/views/ClearBlue2/images/delete.png" /></a></td>
 		<td class="ui-widget-content" width="40%">{{f.Filename}}</td>
-		<td class="ui-widget-content" width="20%">{{Byte2KB(f.File_Size)}} Kb</td>
+		<td class="ui-widget-content" width="20%">{{f.File_Size}} Kb</td>
 		<td class="ui-widget-content" width="20%">{{f.File_Type}}</td>
 	</tr>
 	{% endfor %}
